edit Script src

--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
   <script src="https://code.jquery.com/jquery-3.6.0.js"></script>
   <script src="https://code.jquery.com/ui/1.13.1/jquery-ui.js"></script>
   <script src="https://cdn.jsdelivr.net/jquery.validation/1.16.0/jquery.validate.min.js"></script>
-  <script src="/scripts/constant.js" type="module"></script>
-  <script src="/scripts/validation.js" type="module"></script>
-  <script src="/pages/index.js" type="module"></script>
+  <script src="./scripts/constant.js" type="module"></script>
+  <script src="./scripts/validation.js" type="module"></script>
+  <script src="./pages/index.js" type="module"></script>
 </html>
