delete validation js

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       rel="stylesheet"
     />
     <!--Styles-->
-    <link rel="stylesheet" href="/vendor/normalize.css" />
+    <link rel="stylesheet" href="./vendor/normalize.css" />
     <link rel="stylesheet" href="./pages/index.css" />
     <!--Styles JQ UI-->
     <link rel="stylesheet" href="https://code.jquery.com/ui/1.13.1/themes/base/jquery-ui.css">
@@ -188,6 +188,5 @@
   <script src="https://code.jquery.com/ui/1.13.1/jquery-ui.js"></script>
   <script src="https://cdn.jsdelivr.net/jquery.validation/1.16.0/jquery.validate.min.js"></script>
   <script src="./scripts/constant.js" type="module"></script>
-  <script src="./scripts/validation.js" type="module"></script>
   <script src="./pages/index.js" type="module"></script>
 </html>
